Rush test, build-test, lint-fix

--- a/solutions/fhir-works-on-aws-interface/package.json
+++ b/solutions/fhir-works-on-aws-interface/package.json
@@ -22,7 +22,7 @@
     "watch": "tsc -w",
     "test": "jest --silent",
     "test-coverage": "jest --coverage",
-    "release": "yarn run build && yarn run lint && yarn run test",
+    "build-test": "rushx build && rushx lint-fix && rushx test",
     "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* lib/*",
     "local": "node .",
     "prepublish": "tsc",
