--- a/solutions/fhir-works-on-aws-interface/package.json
+++ b/solutions/fhir-works-on-aws-interface/package.json
@@ -16,13 +16,13 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
+    "build": "heft build --clean",
+    "build-test": "heft test --clean",
+    "test": "heft test --clean --no-build",
     "lint": "eslint . --ext .ts,.tsx",
     "lint-fix": "eslint --fix . --ext .ts,.tsx",
-    "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest --silent",
     "test-coverage": "jest --coverage",
-    "build-test": "rushx build && rushx lint-fix && rushx test",
     "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* lib/*",
     "local": "node .",
     "prepublish": "tsc",
@@ -39,16 +39,18 @@
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^26.6.3",
     "jest-each": "^26.4.2",
     "jest-mock-extended": "^1.0.8",
     "prettier": "^2.4.1",
     "standard-version": "^9.3.2",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "@rushstack/heft": "^0.49.0",
+    "@rushstack/heft-jest-plugin": "^0.4.2",
+    "@rushstack/heft-node-rig": "^1.11.11",
+    "@types/heft-jest": "^1.0.3"
   },
   "jest": {
     "moduleFileExtensions": [
