--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -3,16 +3,24 @@
   "$schema": "https://developer.microsoft.com/json-schemas/rush/v5/approved-packages.schema.json",
   "packages": [
     {
-      "name": "@rushstack/heft",
+      "name": "@aws/eslint-config-workbench-core-eslint-custom",
       "allowedCategories": ["production"]
+    },
+    {
+      "name": "@rushstack/eslint-config",
+      "allowedCategories": ["production", "tools"]
+    },
+    {
+      "name": "@rushstack/heft",
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "@rushstack/heft-jest-plugin",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "@rushstack/heft-node-rig",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "@typescript-eslint/eslint-plugin",
@@ -20,11 +28,15 @@
     },
     {
       "name": "@typescript-eslint/parser",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
+    },
+    {
+      "name": "depcheck",
+      "allowedCategories": ["tools"]
     },
     {
       "name": "eslint",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "eslint-config-airbnb-base",
@@ -35,12 +47,20 @@
       "allowedCategories": ["production"]
     },
     {
+      "name": "eslint-import-resolver-typescript",
+      "allowedCategories": ["tools"]
+    },
+    {
       "name": "eslint-plugin-import",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "eslint-plugin-prettier",
       "allowedCategories": ["production"]
+    },
+    {
+      "name": "eslint-plugin-security",
+      "allowedCategories": ["tools"]
     },
     {
       "name": "jest",
@@ -55,8 +75,28 @@
       "allowedCategories": ["production"]
     },
     {
+      "name": "license-check-and-add",
+      "allowedCategories": ["tools"]
+    },
+    {
+      "name": "license-checker",
+      "allowedCategories": ["tools"]
+    },
+    {
+      "name": "npm-package-json-lint",
+      "allowedCategories": ["production", "tools"]
+    },
+    {
+      "name": "npm-package-json-lint-config-default",
+      "allowedCategories": ["production", "tools"]
+    },
+    {
       "name": "prettier",
       "allowedCategories": ["production"]
+    },
+    {
+      "name": "sort-package-json",
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "standard-version",
@@ -68,7 +108,7 @@
     },
     {
       "name": "typescript",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "winston",
