--- a/solutions/fhir-works-on-aws-interface/package.json
+++ b/solutions/fhir-works-on-aws-interface/package.json
@@ -2,8 +2,11 @@
   "name": "@aws/fhir-works-on-aws-interface",
   "version": "12.1.0",
   "description": "FHIR Works on AWS hosted on AWS Lambda",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/awslabs/fhir-works-on-aws-interface.git"
+  },
+  "license": "Apache-2.0",
   "author": {
     "name": "Amazon Web Services",
     "email": "fhir-works-on-aws-dev@amazon.com",
@@ -14,58 +17,46 @@
     "Tim Nguyen <thingut@amazon.com>",
     "Nestor Carvantes <nestorba@amazon.com>"
   ],
-  "license": "Apache-2.0",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "build": "heft build --clean",
-    "build-test": "heft test --clean",
-    "test": "heft test --clean --no-build",
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint-fix": "eslint --fix . --ext .ts,.tsx",
-    "watch": "tsc -w",
-    "test-coverage": "jest --coverage",
+    "build": "heft build --clean && rushx pkg-json-lint",
+    "build-test": "heft test --clean && rushx pkg-json-lint",
     "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* lib/*",
+    "lint-fix": "eslint . --fix",
     "local": "node .",
+    "pkg-json-lint": "npmPkgJsonLint -c ../../.npmpackagejsonlintrc.json .",
     "prepublish": "tsc",
-    "standard-version": "standard-version --skip.tag=true"
+    "sort-package-json": "sort-package-json package.json",
+    "standard-version": "standard-version --skip.tag=true",
+    "test": "heft test --clean --no-build && rushx pkg-json-lint",
+    "test-coverage": "jest --coverage",
+    "watch": "tsc -w"
   },
   "dependencies": {
     "winston": "^3.3.3",
     "winston-transport": "^4.4.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.19",
-    "@types/node": "^12",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "jest": "^26.6.3",
-    "jest-each": "^26.4.2",
-    "jest-mock-extended": "^1.0.8",
-    "prettier": "^2.4.1",
-    "standard-version": "^9.3.2",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3",
+    "@aws/eslint-config-workbench-core-eslint-custom": "workspace:*",
+    "@rushstack/eslint-config": "^3.0.0",
     "@rushstack/heft": "^0.49.0",
     "@rushstack/heft-jest-plugin": "^0.4.2",
     "@rushstack/heft-node-rig": "^1.11.11",
-    "@types/heft-jest": "^1.0.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "collectCoverage": true,
-    "transform": {
-      "\\.(ts)$": "ts-jest"
-    },
-    "testRegex": ".test.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/awslabs/fhir-works-on-aws-interface.git"
+    "@types/heft-jest": "^1.0.3",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14",
+    "eslint": "^8.7.0",
+    "jest": "^26.6.3",
+    "jest-each": "^26.4.2",
+    "jest-mock-extended": "^1.0.8",
+    "npm-package-json-lint": "^6.3.0",
+    "npm-package-json-lint-config-default": "^5.0.0",
+    "prettier": "^2.4.1",
+    "sort-package-json": "^1.57.0",
+    "standard-version": "^9.3.2",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.5.2"
   },
   "engines": {
     "node": ">=12.0.0"
