--- a/core/eslint-custom/package.json
+++ b/core/eslint-custom/package.json
@@ -21,7 +21,7 @@
     "make-badges": "echo 'NO TEST COVERAGE, SO NO BADGE !'",
     "pkg-json-lint": "npmPkgJsonLint -c ../../.npmpackagejsonlintrc.json .",
     "sort-package-json": "sort-package-json package.json",
-    "test": "heft test --clean --no-build && && rushx pkg-json-lint"
+    "test": "heft test --clean --no-build && rushx pkg-json-lint"
   },
   "dependencies": {
     "@rushstack/eslint-config": "^3.0.0",
