--- a/core/eslint-custom/config/jest.config.json
+++ b/core/eslint-custom/config/jest.config.json
@@ -1,4 +1,4 @@
 {
   "extends": "@rushstack/heft-node-rig/profiles/default/config/jest.config.json",
-  "collectCoverage": false
+  "collectCoverage": true
 }
