--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -3,6 +3,10 @@
   "$schema": "https://developer.microsoft.com/json-schemas/rush/v5/approved-packages.schema.json",
   "packages": [
     {
+      "name": "@aws/eslint-config-fwoa-eslint-custom",
+      "allowedCategories": ["production"]
+    },
+    {
       "name": "@aws/eslint-config-workbench-core-eslint-custom",
       "allowedCategories": ["production"]
     },
