--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.head_ref }}
-          token: ${{ secrets.MERGE_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Base Action
         uses: ./.github/actions/baseAction
