--- a/.github/workflows/solutions-pull-request.yml
+++ b/.github/workflows/solutions-pull-request.yml
@@ -1,4 +1,4 @@
-name: Pull Request Workflow
+name: Solutions Pull Request
 
 on: 
   pull_request:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   pull-request-job:
-    name: Status Checks
+    name: Viperlight Scan
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
