--- a/fwoa-core/persistence-ddb/package.json
+++ b/fwoa-core/persistence-ddb/package.json
@@ -2,6 +2,7 @@
   "name": "@aws/fhir-works-on-aws-persistence-ddb",
   "version": "3.12.0",
   "description": "FHIR Works on AWS persistence DynamoDB implementation",
+  "homepage": "https://github.com/aws-solutions/fhir-works-on-aws",
   "repository": {
     "type": "git",
     "url": "git://github.com/awslabs/fhir-works-on-aws-persistence-ddb.git"
