--- a/fwoa-core/persistence-ddb/tsconfig.json
+++ b/fwoa-core/persistence-ddb/tsconfig.json
@@ -2,6 +2,7 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "./node_modules/@rushstack/heft-node-rig/profiles/default/tsconfig-base.json",
   "compilerOptions": {
+    "lib": ["es2019"],
     "types": ["heft-jest", "node"],
     "target": "es2019", // Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'.
     "module": "commonjs", // Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'.
@@ -14,5 +15,5 @@
     "resolveJsonModule": true,
     "baseUrl": "."
   },
-  "include": ["src/**/*", "sampleData/**/*"]
+  "include": ["src/**/*"]
 }
