--- a/fwoa-core/persistence-ddb/config/jest.config.json
+++ b/fwoa-core/persistence-ddb/config/jest.config.json
@@ -9,13 +9,6 @@
       "statements": 70
     }
   },
-  "coveragePathIgnorePatterns": [
-    "<rootDir>/src/errors",
-    "<rootDir>/src/index.ts",
-    "<rootDir>/src/constants.ts",
-    "<rootDir>/src/resourceMeta.ts",
-    "<rootDir>/src/stubs.ts",
-    "<rootDir>/src/loggerBuilder.ts"
-  ],
+  "coveragePathIgnorePatterns": ["<rootDir>/src/index.ts"],
   "coverageReporters": ["json-summary", "json", "lcov", "text"]
 }
