--- a/fwoa-core/persistence-ddb/config/jest.config.json
+++ b/fwoa-core/persistence-ddb/config/jest.config.json
@@ -4,11 +4,14 @@
   "coverageThreshold": {
     "global": {
       "branches": 70,
-      "functions": 50,
+      "functions": 70,
       "lines": 70,
       "statements": 70
     }
   },
-  "coveragePathIgnorePatterns": ["<rootDir>/src/index.ts"],
+  "coveragePathIgnorePatterns": [
+    "<rootDir>/src/index.ts",
+    "<rootDir>/src/dataServices/__mock__dynamoDbDataService.ts "
+  ],
   "coverageReporters": ["json-summary", "json", "lcov", "text"]
 }
