--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -31,6 +31,14 @@
       "allowedCategories": ["production", "tools"]
     },
     {
+      "name": "aws-sdk",
+      "allowedCategories": ["production"]
+    },
+    {
+      "name": "aws-sdk-mock",
+      "allowedCategories": ["production"]
+    },
+    {
       "name": "depcheck",
       "allowedCategories": ["tools"]
     },
