--- a/fwoa-core/search-es/package.json
+++ b/fwoa-core/search-es/package.json
@@ -24,6 +24,7 @@
     "build": "heft build --clean && rushx pkg-json-lint",
     "build-test": "heft test --clean && rushx pkg-json-lint",
     "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* lib/*",
+    "jest": "jest",
     "lint": "eslint . --ext .ts,.tsx",
     "lint-fix": "eslint --fix . --ext .ts,.tsx",
     "local": "node .",
@@ -46,13 +47,13 @@
   "dependencies": {
     "@aws-sdk/client-sns": "^3.50.0",
     "@aws-sdk/node-http-handler": "^3.52.0",
+    "@aws/fhir-works-on-aws-interface": "workspace:*",
     "@elastic/elasticsearch": "7.13.0",
     "@types/aws-lambda": "^8.10.83",
     "aws-elasticsearch-connector": "^8.2.0",
     "aws-sdk": "^2.1000.0",
     "aws-xray-sdk": "^3.3.3",
     "date-fns": "^2.19.0",
-    "fhir-works-on-aws-interface": "^12.1.0",
     "flat": "^5.0.2",
     "lodash": "^4.17.20",
     "nearley": "^2.20.0",
