--- a/fwoa-core/search-es/package.json
+++ b/fwoa-core/search-es/package.json
@@ -33,7 +33,7 @@
     "release": "yarn run build && yarn run lint && yarn run test",
     "sort-package-json": "sort-package-json package.json",
     "standard-version": "standard-version --skip.tag=true",
-    "test": "heft test --clean --no-build && rushx pkg-json-lint",
+    "test": "TZ=UTC heft test --clean --no-build && rushx pkg-json-lint",
     "test-coverage": "jest --coverage",
     "watch": "tsc -w"
   },
