--- a/.viperlightignore
+++ b/.viperlightignore
@@ -11,6 +11,7 @@ lib
 fwoa-core/interface/THIRD-PARTY
 fwoa-core/persistence-ddb/THIRD-PARTY 
 fwoa-core/persistence-ddb/package.json
+fwoa-core/persistence-ddb/src/ddbToEs/ddbToEsSync.test.ts
 # NOTICE files
 .*/NOTICE
 
