fix: migrating persistent package to the new monorepo (#8)
Co-authored-by: Sergey Vun <sevu@amazon.com>
Co-authored-by: Yanyu <zheyanyu@amazon.com>

--- a/.viperlightignore
+++ b/.viperlightignore
@@ -9,7 +9,9 @@ common
 build
 lib
 fwoa-core/interface/THIRD-PARTY
-
+fwoa-core/persistence-ddb/THIRD-PARTY 
+fwoa-core/persistence-ddb/package.json
+fwoa-core/persistence-ddb/src/ddbToEs/ddbToEsSync.test.ts
 # NOTICE files
 .*/NOTICE
 
