--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -7,6 +7,18 @@
       "allowedCategories": ["production"]
     },
     {
+      "name": "@aws/fhir-works-on-aws-interface",
+      "allowedCategories": ["production"]
+    },
+    {
+      "name": "@elastic/elasticsearch",
+      "allowedCategories": ["production"]
+    },
+    {
+      "name": "@elastic/elasticsearch-mock",
+      "allowedCategories": ["production"]
+    },
+    {
       "name": "@rushstack/eslint-config",
       "allowedCategories": ["production", "tools"]
     },
@@ -29,6 +41,22 @@
     {
       "name": "@typescript-eslint/parser",
       "allowedCategories": ["production", "tools"]
+    },
+    {
+      "name": "aws-elasticsearch-connector",
+      "allowedCategories": ["production"]
+    },
+    {
+      "name": "aws-sdk",
+      "allowedCategories": ["production"]
+    },
+    {
+      "name": "aws-sdk-mock",
+      "allowedCategories": ["production"]
+    },
+    {
+      "name": "aws-xray-sdk",
+      "allowedCategories": ["production"]
     },
     {
       "name": "depcheck",
@@ -63,6 +91,14 @@
       "allowedCategories": ["tools"]
     },
     {
+      "name": "fhir-works-on-aws-interface",
+      "allowedCategories": ["production"]
+    },
+    {
+      "name": "flat",
+      "allowedCategories": ["production"]
+    },
+    {
       "name": "jest",
       "allowedCategories": ["production"]
     },
@@ -83,6 +119,14 @@
       "allowedCategories": ["tools"]
     },
     {
+      "name": "lodash",
+      "allowedCategories": ["production"]
+    },
+    {
+      "name": "mime-types",
+      "allowedCategories": ["production"]
+    },
+    {
       "name": "npm-package-json-lint",
       "allowedCategories": ["production", "tools"]
     },
@@ -92,6 +136,14 @@
     },
     {
       "name": "prettier",
+      "allowedCategories": ["production"]
+    },
+    {
+      "name": "promise.allsettled",
+      "allowedCategories": ["production"]
+    },
+    {
+      "name": "sinon",
       "allowedCategories": ["production"]
     },
     {
@@ -109,6 +161,10 @@
     {
       "name": "typescript",
       "allowedCategories": ["production", "tools"]
+    },
+    {
+      "name": "uuid",
+      "allowedCategories": ["production"]
     },
     {
       "name": "winston",
