feat: create encryption function used to encrypt log string

--- a/fwoa-core/interface/package.json
+++ b/fwoa-core/interface/package.json
@@ -41,8 +41,8 @@
     "@types/heft-jest": "^1.0.3",
     "@types/jest": "^26.0.19",
     "@types/node": "^14",
-    "aws-sdk": "~2.1303.0",
-    "aws-sdk-mock": "^5.8.0",
+    "aws-sdk": "^2.1000.0",
+    "aws-sdk-mock": "^5.1.0",
     "eslint": "^8.7.0",
     "jest": "^26.6.3",
     "jest-each": "^26.6.2",
