fix: updated the viperlight

--- a/.viperlightignore
+++ b/.viperlightignore
@@ -12,6 +12,8 @@ fwoa-core/interface/THIRD-PARTY
 fwoa-core/persistence-ddb/THIRD-PARTY 
 fwoa-core/persistence-ddb/package.json
 fwoa-core/persistence-ddb/src/ddbToEs/ddbToEsSync.test.ts
+fwoa-core/routing/THIRD-PARTY
+fwoa-core/routing/package.json
 # NOTICE files
 .*/NOTICE
 
