--- a/.viperlightignore
+++ b/.viperlightignore
@@ -9,6 +9,11 @@ common
 build
 lib
 fwoa-core/interface/THIRD-PARTY
+fwoa-core/search-es/src/StreamSubscriptionMatcher/subscriptions.test.ts
+fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json
+fwoa-core/search-es/src/schema/searchMappingsBase.3.0.1.json
+fwoa-core/search-es/src/schema/searchMappingsBase.4.0.1.json
+fwoa-core/search-es/package.json
 
 # NOTICE files
 .*/NOTICE
