feat: add authz-smart package

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -4,7 +4,11 @@
   "packages": [
     {
       "name": "@aws/eslint-config-fwoa-eslint-custom",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
+    },
+    {
+      "name": "@aws/fhir-works-on-aws-interface",
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "@rushstack/eslint-config",
@@ -51,8 +55,24 @@
       "allowedCategories": ["production"]
     },
     {
+      "name": "axios",
+      "allowedCategories": ["tools"]
+    },
+    {
+      "name": "axios-mock-adapter",
+      "allowedCategories": ["tools"]
+    },
+    {
       "name": "cors",
       "allowedCategories": ["production"]
+    },
+    {
+      "name": "csv-load-sync",
+      "allowedCategories": ["tools"]
+    },
+    {
+      "name": "csv-writer",
+      "allowedCategories": ["tools"]
     },
     {
       "name": "depcheck",
@@ -96,11 +116,15 @@
     },
     {
       "name": "fhir-works-on-aws-interface",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "flat",
       "allowedCategories": ["production"]
+    },
+    {
+      "name": "fs",
+      "allowedCategories": ["tools"]
     },
     {
       "name": "http-errors",
@@ -108,7 +132,7 @@
     },
     {
       "name": "jest",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "jest-each",
@@ -116,7 +140,23 @@
     },
     {
       "name": "jest-mock-extended",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
+    },
+    {
+      "name": "jose",
+      "allowedCategories": ["tools"]
+    },
+    {
+      "name": "json-2-csv",
+      "allowedCategories": ["tools"]
+    },
+    {
+      "name": "jsonwebtoken",
+      "allowedCategories": ["tools"]
+    },
+    {
+      "name": "jwks-rsa",
+      "allowedCategories": ["tools"]
     },
     {
       "name": "license-check-and-add",
@@ -128,7 +168,7 @@
     },
     {
       "name": "lodash",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "mime-types",
@@ -148,7 +188,7 @@
     },
     {
       "name": "prettier",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "sanitize-html",
@@ -168,7 +208,7 @@
     },
     {
       "name": "standard-version",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "supertest",
@@ -176,7 +216,7 @@
     },
     {
       "name": "ts-jest",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "typescript",
