--- a/.viperlightignore
+++ b/.viperlightignore
@@ -22,3 +22,7 @@ fwoa-core/interface/package.json:13
 fwoa-core/interface/src/fhirConfig.ts:49
 fwoa-core/interface/openapi.yaml:7
 fwoa-core/routing/package.json:13
+fwoa-core/authz-smart/package.json:13
+fwoa-core/authz-smart/src/comboTest/testStubs.ts:56
+fwoa-core/authz-smart/src/smartAuthorizationHelper.test.ts:352
+fwoa-core/authz-smart/src/smartHandler.test.ts:90
