--- a/fwoa-core/authz-smart/package.json
+++ b/fwoa-core/authz-smart/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@aws/fhir-works-on-aws-routing",
-  "version": "6.6.2",
-  "description": "FHIR Works on AWS routing implementation",
-  "homepage": "https://github.com/aws-solutions/fhir-works-on-aws/fwoa-core/routing",
+  "name": "@aws/fhir-works-on-aws-authz-smart",
+  "version": "3.1.4",
+  "description": "FHIR Works on AWS SMART on FHIR authorization",
+  "homepage": "https://github.com/aws-solutions/fhir-works-on-aws/fwoa-core/authz-smart",
   "repository": {
     "type": "git",
-    "url": "git://github.com/awslabs/fhir-works-on-aws-routing.git"
+    "url": "git://github.com/awslabs/fhir-works-on-aws-authz-smart.git"
   },
   "license": "Apache-2.0",
   "author": {
@@ -28,43 +28,24 @@
     "sort-package-json": "sort-package-json package.json",
     "standard-version": "standard-version --skip.tag=true",
     "test": "heft test --clean --no-build && rushx pkg-json-lint",
+    "test-coverage": "jest --coverage",
     "watch": "tsc -w"
   },
-  "jest": {
-    "collectCoverage": true,
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "testRegex": ".test.ts",
-    "transform": {
-      "\\.(ts)$": "ts-jest"
-    }
-  },
   "resolutions": {
-    "json5": "^2.2.3",
-    "path-parse": "^1.0.7",
-    "qs": "^6.10.3",
+    "**/@typescript-eslint/eslint-plugin": "^4.1.1",
+    "**/@typescript-eslint/parser": "^4.1.1",
+    "ansi-regex": "^5.0.1",
+    "axios": "^0.21.4",
+    "json5": "^2.2.2",
+    "jsonwebtoken": "^9.0.0",
     "set-value": "^4.0.1"
   },
   "dependencies": {
-    "@types/cors": "^2.8.7",
-    "@types/express-serve-static-core": "^4.17.2",
-    "ajv": "^6.11.0",
-    "ajv-errors": "^1.0.1",
-    "aws-sdk": "^2.1000.0",
-    "aws-xray-sdk": "^3.3.3",
-    "cors": "^2.8.5",
-    "errorhandler": "^1.5.1",
-    "express": "^4.17.1",
-    "fhir-works-on-aws-interface": "^12.1.1",
-    "flat": "^5.0.0",
-    "http-errors": "^1.8.0",
-    "lodash": "^4.17.20",
-    "mime-types": "^2.1.26",
-    "sanitize-html": "^2.8.0",
-    "serverless-http": "^2.3.1",
-    "uuid": "^3.4.0"
+    "@aws/fhir-works-on-aws-interface": "workspace:*",
+    "axios": "^0.21.4",
+    "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^1.12.1",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@aws/eslint-config-fwoa-eslint-custom": "workspace:*",
@@ -72,31 +53,24 @@
     "@rushstack/heft": "^0.49.0",
     "@rushstack/heft-jest-plugin": "^0.4.2",
     "@rushstack/heft-node-rig": "^1.11.11",
-    "@types/errorhandler": "^0.0.32",
-    "@types/express": "^4.17.2",
-    "@types/flat": "^5.0.1",
     "@types/heft-jest": "^1.0.3",
-    "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.19",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.161",
-    "@types/mime-types": "^2.1.0",
-    "@types/mock-req-res": "^1.1.2",
     "@types/node": "^14",
-    "@types/sanitize-html": "^2.8.0",
-    "@types/uuid": "^3.4.7",
-    "aws-sdk-mock": "^5.1.0",
+    "axios-mock-adapter": "^1.18.2",
+    "csv-load-sync": "^2.3.1",
+    "csv-writer": "^1.6.0",
     "eslint": "^8.7.0",
+    "fs": "0.0.1-security",
     "jest": "^26.6.3",
-    "jest-each": "^26.6.2",
     "jest-mock-extended": "^1.0.8",
-    "mock-req-res": "^1.2.0",
+    "jose": "^3.5.1",
+    "json-2-csv": "^3.17.2",
     "npm-package-json-lint": "^6.3.0",
     "npm-package-json-lint-config-default": "^5.0.0",
-    "prettier": "^2.4.1",
-    "sinon": "^10.0.1",
     "sort-package-json": "^1.57.0",
     "standard-version": "^9.3.2",
-    "supertest": "^6.1.6",
     "ts-jest": "^26.4.4",
     "typescript": "^4.9.4"
   },
