--- a/.viperlightignore
+++ b/.viperlightignore
@@ -10,7 +10,9 @@ build
 lib
 fwoa-core/interface/THIRD-PARTY
 fwoa-core/persistence-ddb/THIRD-PARTY 
-fwoa-core/persistence-ddb/package.json
+fwoa-core/persistence-ddb/package.json:17
+fwoa-core/persistence-ddb/package.json:18
+fwoa-core/persistence-ddb/package.json:19
 fwoa-core/persistence-ddb/src/ddbToEs/ddbToEsSync.test.ts
 fwoa-core/routing/THIRD-PARTY
 fwoa-core/routing/package.json
