--- a/fwoa-core/authz-rbac/package.json
+++ b/fwoa-core/authz-rbac/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@aws/fhir-works-on-aws-authz-smart",
-  "version": "3.1.4",
-  "description": "FHIR Works on AWS SMART on FHIR authorization",
-  "homepage": "https://github.com/aws-solutions/fhir-works-on-aws/fwoa-core/authz-smart",
+  "name": "@aws/fhir-works-on-aws-authz-rbac",
+  "version": "5.0.0",
+  "description": "FHIR Works on AWS role base access control",
+  "homepage": "https://github.com/aws-solutions/fhir-works-on-aws/fwoa-core/authz-rbac",
   "repository": {
     "type": "git",
-    "url": "git://github.com/awslabs/fhir-works-on-aws-authz-smart.git"
+    "url": "git://github.com/awslabs/fhir-works-on-aws-authz-rbac.git"
   },
   "license": "Apache-2.0",
   "author": {
@@ -19,32 +19,18 @@
     "build": "heft build --clean && rushx pkg-json-lint",
     "build-test": "heft test --clean && rushx pkg-json-lint",
     "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* lib/*",
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint-fix": "eslint --fix . --ext .ts,.tsx",
+    "lint-fix": "eslint . --fix",
     "local": "node .",
     "pkg-json-lint": "npmPkgJsonLint -c ../../.npmpackagejsonlintrc.json .",
     "prepublish": "tsc",
-    "release": "yarn run build && yarn run lint && yarn run test",
     "sort-package-json": "sort-package-json package.json",
     "standard-version": "standard-version --skip.tag=true",
     "test": "heft test --clean --no-build && rushx pkg-json-lint",
-    "test-coverage": "jest --coverage",
     "watch": "tsc -w"
-  },
-  "resolutions": {
-    "**/@typescript-eslint/eslint-plugin": "^4.1.1",
-    "**/@typescript-eslint/parser": "^4.1.1",
-    "ansi-regex": "^5.0.1",
-    "axios": "^0.21.4",
-    "json5": "^2.2.2",
-    "jsonwebtoken": "^9.0.0",
-    "set-value": "^4.0.1"
   },
   "dependencies": {
     "@aws/fhir-works-on-aws-interface": "workspace:*",
-    "axios": "^0.21.4",
     "jsonwebtoken": "^9.0.0",
-    "jwks-rsa": "^1.12.1",
     "lodash": "^4.17.20"
   },
   "devDependencies": {
@@ -58,17 +44,14 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14",
-    "axios-mock-adapter": "^1.18.2",
-    "csv-load-sync": "^2.3.1",
-    "csv-writer": "^1.6.0",
+    "@types/shuffle-array": "^1.0.0",
     "eslint": "^8.7.0",
-    "fs": "0.0.1-security",
     "jest": "^26.6.3",
     "jest-mock-extended": "^1.0.8",
-    "jose": "^3.5.1",
-    "json-2-csv": "^3.17.2",
     "npm-package-json-lint": "^6.3.0",
     "npm-package-json-lint-config-default": "^5.0.0",
+    "prettier": "^2.4.1",
+    "shuffle-array": "^1.0.1",
     "sort-package-json": "^1.57.0",
     "standard-version": "^9.3.2",
     "ts-jest": "^26.4.4",
