--- a/fwoa-core/interface/package.json
+++ b/fwoa-core/interface/package.json
@@ -22,6 +22,7 @@
     "lint-fix": "eslint . --fix",
     "local": "node .",
     "pkg-json-lint": "npmPkgJsonLint -c ../../.npmpackagejsonlintrc.json .",
+    "prettier": "prettier --config '../../.prettierrc.js' 'src/**/*.ts' --write",
     "prepublish": "tsc",
     "sort-package-json": "sort-package-json package.json",
     "standard-version": "standard-version --skip.tag=true",
