--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -21,7 +21,7 @@
     "build": "heft build --clean && rushx pkg-json-lint",
     "build-test": "heft test --clean && rushx pkg-json-lint",
     "cdk": "cdk",
-    "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* lib/* cdk.out/*",
+    "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* cdk.out/*",
     "compile-igs": "ts-node scripts/compile-igs.ts",
     "deploy": "cdk deploy --outputs-file Info_Output.log",
     "int-test": "jest --testPathPattern=integration-test/* --runInBand",
