--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -74,6 +74,9 @@
     "xmlhttprequest-ssl": "^1.6.2"
   },
   "dependencies": {
+    "@aws/fhir-works-on-aws-authz-rbac": "workspace:*",
+    "@aws/fhir-works-on-aws-interface": "workspace:*",
+    "@aws/fhir-works-on-aws-routing": "workspace:*",
     "@types/aws-lambda": "^8.10.92",
     "aws-cdk-lib": "2.45.0",
     "aws-embedded-metrics": "^2.0.4",
@@ -81,10 +84,7 @@
     "axios": "^0.21.4",
     "cdk-nag": "^2.14.14",
     "constructs": "^10.0.0",
-    "fhir-works-on-aws-authz-rbac": "5.0.0",
-    "fhir-works-on-aws-interface": "^12.1.1",
     "fhir-works-on-aws-persistence-ddb": "3.12.0",
-    "fhir-works-on-aws-routing": "6.6.1",
     "fhir-works-on-aws-search-es": "3.12.0",
     "fs-extra": "^10.1.0",
     "inquirer": "^5.0.0",
