--- a/fwoa-core/interface/package.json
+++ b/fwoa-core/interface/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aws/fhir-works-on-aws-interface",
+  "name": "fhir-works-on-aws-interface",
   "version": "12.1.0",
   "description": "FHIR Works on AWS hosted on AWS Lambda",
   "homepage": "https://github.com/aws-solutions/fhir-works-on-aws/fwoa-core/interface",
