--- a/fwoa-core/routing/package.json
+++ b/fwoa-core/routing/package.json
@@ -57,7 +57,7 @@
     "cors": "^2.8.5",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "fhir-works-on-aws-interface": "^12.1.1",
+    "fhir-works-on-aws-interface": "workspace:*",
     "flat": "^5.0.0",
     "http-errors": "^1.8.0",
     "lodash": "^4.17.15",
