feat: migrate persistance (#5)
Co-authored-by: Sergey Vun <sevu@amazon.com>
Co-authored-by: Yanyu <zheyanyu@amazon.com>

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -11,6 +11,14 @@
       "allowedCategories": ["production", "tools"]
     },
     {
+      "name": "@elastic/elasticsearch",
+      "allowedCategories": ["production"]
+    },
+    {
+      "name": "@elastic/elasticsearch-mock",
+      "allowedCategories": ["production"]
+    },
+    {
       "name": "@rushstack/eslint-config",
       "allowedCategories": ["production", "tools"]
     },
@@ -40,6 +48,10 @@
     },
     {
       "name": "ajv-errors",
+      "allowedCategories": ["production"]
+    },
+    {
+      "name": "aws-elasticsearch-connector",
       "allowedCategories": ["production"]
     },
     {
@@ -189,6 +201,10 @@
     {
       "name": "prettier",
       "allowedCategories": ["production", "tools"]
+    },
+    {
+      "name": "promise.allsettled",
+      "allowedCategories": ["production"]
     },
     {
       "name": "sanitize-html",
