--- a/fwoa-core/search-es/package.json
+++ b/fwoa-core/search-es/package.json
@@ -64,9 +64,9 @@
     "@aws/eslint-config-fwoa-eslint-custom": "workspace:*",
     "@elastic/elasticsearch-mock": "^0.3.0",
     "@rushstack/eslint-config": "^3.0.0",
-    "@rushstack/heft": "^0.49.0",
-    "@rushstack/heft-jest-plugin": "^0.4.2",
-    "@rushstack/heft-node-rig": "^1.11.11",
+    "@rushstack/heft": "0.49.0",
+    "@rushstack/heft-jest-plugin": "0.4.2",
+    "@rushstack/heft-node-rig": "1.11.11",
     "@types/flat": "^5.0.1",
     "@types/heft-jest": "^1.0.3",
     "@types/jest": "^26.0.19",
