test: add unit tests for encryption process and loggerMiddleware

--- a/fwoa-core/interface/config/jest.config.json
+++ b/fwoa-core/interface/config/jest.config.json
@@ -15,7 +15,8 @@
     "<rootDir>/src/constants.ts",
     "<rootDir>/src/resourceMeta.ts",
     "<rootDir>/src/stubs.ts",
-    "<rootDir>/src/loggerBuilder.ts"
+    "<rootDir>/src/loggerBuilder.ts",
+    "<rootDir>/src/encryptedLoggerBuilder.ts"
   ],
   "coverageReporters": ["json-summary", "json", "lcov", "text"]
 }
