--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -101,9 +101,9 @@
   "devDependencies": {
     "@aws/eslint-config-fwoa-eslint-custom": "workspace:*",
     "@rushstack/eslint-config": "^3.0.0",
-    "@rushstack/heft": "^0.49.0",
-    "@rushstack/heft-jest-plugin": "^0.4.2",
-    "@rushstack/heft-node-rig": "^1.11.11",
+    "@rushstack/heft": "0.49.0",
+    "@rushstack/heft-jest-plugin": "0.4.2",
+    "@rushstack/heft-node-rig": "1.11.11",
     "@types/chance": "^1.1.1",
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.17.2",
