--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -76,6 +76,7 @@
   "dependencies": {
     "@aws/fhir-works-on-aws-authz-rbac": "workspace:*",
     "@aws/fhir-works-on-aws-interface": "workspace:*",
+    "@aws/fhir-works-on-aws-persistence-ddb": "workspace:*",
     "@aws/fhir-works-on-aws-routing": "workspace:*",
     "@types/aws-lambda": "^8.10.92",
     "aws-cdk-lib": "2.45.0",
@@ -84,7 +85,6 @@
     "axios": "^0.21.4",
     "cdk-nag": "^2.14.14",
     "constructs": "^10.0.0",
-    "fhir-works-on-aws-persistence-ddb": "3.12.0",
     "fhir-works-on-aws-search-es": "3.12.0",
     "fs-extra": "^10.1.0",
     "inquirer": "^5.0.0",
@@ -133,7 +133,7 @@
     "serverless-bundle": "^4.4.0",
     "serverless-offline": "^8.2.0",
     "serverless-step-functions": "^3.1.1",
-    "sinon": "^10.0.1",
+    "sinon": "^11.0.0",
     "sort-package-json": "^1.57.0",
     "tmp-promise": "^3.0.2",
     "ts-jest": "^26.4.4",
