fix: rush update

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -15,6 +15,10 @@
       "allowedCategories": ["production", "tools"]
     },
     {
+      "name": "@aws/fhir-works-on-aws-persistence-ddb",
+      "allowedCategories": ["production"]
+    },
+    {
       "name": "@aws/fhir-works-on-aws-routing",
       "allowedCategories": ["production"]
     },
