build: add lock file path, move lib folder under src

--- a/solutions/smart-deployment/tsconfig.json
+++ b/solutions/smart-deployment/tsconfig.json
@@ -12,8 +12,7 @@
     "outDir": "dist",
     "sourceMap": true,
     "resolveJsonModule": true,
-    "baseUrl": ".",
-    "types": ["jest", "node"]
+    "baseUrl": "."
   },
   "include": ["src/**/*", "src/integration-tests/**/*"]
 }
