--- a/.viperlightignore
+++ b/.viperlightignore
@@ -9,19 +9,18 @@ common
 build
 lib
 
-# Third Party files
-fwoa-core/interface/THIRD-PARTY
-fwoa-core/persistence-ddb/THIRD-PARTY 
-fwoa-core/routing/THIRD-PARTY
-fwoa-core/authz-smart/THIRD-PARTY
-fwoa-core/authz-rbac/THIRD-PARTY
-
-# NOTICE files
+# Instructions / documentation files
+.*/THIRD-PARTY
 .*/NOTICE
+.*/INSTALL.md
 
 # Line excludes
-# False positive
+# False positive / dummy emails
 fwoa-core/interface/src/fhirConfig.ts:49
+solutions/deployment/scripts/install.sh:332
+solutions/deployment/scripts/provision-user.py:26
+solutions/deployment/scripts/provision-user.py:41
+solutions/deployment/scripts/win_install.ps1:325
 
 # Team Email
 .github/temp-workflows/release-pr.yml:28
@@ -31,9 +30,14 @@ fwoa-core/routing/package.json:13
 fwoa-core/authz-smart/package.json:13
 fwoa-core/persistence-ddb/package.json:13
 fwoa-core/authz-rbac/package.json:13
+solutions/deployment/package.json:13
+solutions/deployment/src/integration-tests/infrastructure/subscriptions-endpoint/src/package.json:12
 
 # Dummy Email for Testing
 fwoa-core/authz-smart/src/comboTest/testStubs.ts:56
 fwoa-core/authz-smart/src/smartAuthorizationHelper.test.ts:352
 fwoa-core/authz-smart/src/smartHandler.test.ts:90
+solutions/deployment/src/integration-tests/search.test.ts:382
+solutions/deployment/src/integration-tests/search.test.ts:412
+solutions/deployment/src/integration-tests/search.test.ts:428
 
