--- a/.viperlightignore
+++ b/.viperlightignore
@@ -8,6 +8,13 @@ common
 .next
 build
 lib
+fwoa-core/search-es/src/StreamSubscriptionMatcher/subscriptions.test.ts:43
+fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4333
+fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4334
+fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4338
+fwoa-core/search-es/src/schema/searchMappingsBase.3.0.1.json:1340
+fwoa-core/search-es/src/schema/searchMappingsBase.4.0.1.json:1446
+
 
 #Third party file
 THIRD-PARTY$
@@ -27,6 +34,7 @@ fwoa-core/routing/package.json:13
 fwoa-core/authz-smart/package.json:13
 fwoa-core/authz-rbac/package.json:13
 fwoa-core/persistence-ddb/package.json:13
+fwoa-core/search-es/package.json:13
 
 # Dummy Email for Testing
 fwoa-core/authz-smart/src/comboTest/testStubs.ts:56
