--- a/.viperlightignore
+++ b/.viperlightignore
@@ -8,7 +8,6 @@ common
 .next
 build
 lib
-fwoa-core/search-es/src/StreamSubscriptionMatcher/subscriptions.test.ts:43
 fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4333
 fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4334
 fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4338
@@ -25,6 +24,11 @@ THIRD-PARTY$
 # Line excludes
 # False positive
 fwoa-core/interface/src/fhirConfig.ts:49
+fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4333
+fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4334
+fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4338
+fwoa-core/search-es/src/schema/searchMappingsBase.3.0.1.json:1340
+fwoa-core/search-es/src/schema/searchMappingsBase.4.0.1.json:1446
 
 # Team Email
 .github/temp-workflows/release-pr.yml:28
@@ -40,3 +44,4 @@ fwoa-core/search-es/package.json:13
 fwoa-core/authz-smart/src/comboTest/testStubs.ts:56
 fwoa-core/authz-smart/src/smartAuthorizationHelper.test.ts:352
 fwoa-core/authz-smart/src/smartHandler.test.ts:90
+fwoa-core/search-es/src/StreamSubscriptionMatcher/subscriptions.test.ts:43
